--- a/package.json
+++ b/package.json
@@ -29,9 +29,15 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@eslint/js": "^9.37.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.3.3",
     "eslint": "^9.37.0",
+    "eslint-plugin-jest": "^29.0.1",
     "eslint-plugin-react": "^7.37.5",
-    "globals": "^16.4.0"
+    "globals": "^16.4.0",
+    "jest": "^29.7.0",
+    "jest-expo": "^54.0.12",
+    "react-test-renderer": "^18.2.0"
   },
   "private": true
 }
