--- a/package.json
+++ b/package.json
@@ -7,7 +7,18 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    
+    "transform": {
+      "^.+\\.[jt]sx?$": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg|react-router-native)"
+    ]
   },
   "dependencies": {
     "@apollo/client": "^3.7.17",
@@ -36,7 +47,7 @@
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.4.0",
     "jest": "^29.7.0",
-    "jest-expo": "^54.0.12",
+    "jest-expo": "^50.0.4",
     "react-test-renderer": "^18.2.0"
   },
   "private": true
